docs/v0.3.0a37/_sources/reference/_autosummary/matflow.Action.rst.txt
matflow.Action
==============

.. currentmodule:: matflow

.. autoclass:: Action
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~Action.expand
      ~Action.from_json_like
      ~Action.generate_data_index
      ~Action.get_app_data_script_path
      ~Action.get_command_input_file_labels
      ~Action.get_command_input_types
      ~Action.get_command_output_types
      ~Action.get_commands_action_env
      ~Action.get_input_file_generator_action_env
      ~Action.get_input_file_labels
      ~Action.get_input_types
      ~Action.get_output_file_labels
      ~Action.get_output_file_parser_action_env
      ~Action.get_output_types
      ~Action.get_param_dump_file_path_JSON
      ~Action.get_param_dump_file_stem
      ~Action.get_param_load_file_path_HDF5
      ~Action.get_param_load_file_path_JSON
      ~Action.get_param_load_file_stem
      ~Action.get_parameter_dependence
      ~Action.get_possible_scopes
      ~Action.get_precise_scope
      ~Action.get_resolved_action_env
      ~Action.get_script_name
      ~Action.is_app_data_script
      ~Action.is_input_type_required
      ~Action.to_dict
      ~Action.to_json_like
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Action.app
      ~Action.task_schema
   
   